Bug 170166 - Bullets appeared after PPTX export
Summary: Bullets appeared after PPTX export
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:26.8.0 target:26.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-12-29 16:52 UTC by Balázs Varga
Modified: 2026-01-08 16:11 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file to save (14.46 KB, application/vnd.oasis.opendocument.presentation)
2025-12-29 16:53 UTC, Balázs Varga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Balázs Varga 2025-12-29 16:52:49 UTC
Description:
Unnecessary bullet numbering after pptx export.

Steps to Reproduce:
1.Open example document (example.odp - see no bullets in subtitle textshape)
2.Save as example.pptx
3.Reopen the file

Actual Results:
Bullets appear in front of the first paragraph.

Expected Results:
No bullets should appear in front of the first paragraph.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 20; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: de-DE (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 Balázs Varga 2025-12-29 16:53:35 UTC
Created attachment 204853 [details]
Example file to save
Comment 2 Balázs Varga 2025-12-29 17:05:31 UTC
The bullets coming back are due to:
https://git.libreoffice.org/core/commit/ef32ba978d7be844440ee0d9c78ad37128b35512

author		Balazs Varga <balazs.varga@collabora.com>	Fri Aug 29 11:00:19 2025 +0200
committer	Balazs Varga <balazs.varga@collabora.com>	Tue Sep 02 08:19:45 2025 +0200

Related: tdf#111927 - PPTX: fix placeholder title text becomes small
Comment 3 Commit Notification 2025-12-31 02:38:22 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/415c7e04dc6a4a1638a63bf7195c8319b1cb8f85

tdf#170166: sd ooxml export: fix bullets in subtitle presobj

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2026-01-08 16:11:29 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/bacd9a28b8695830a9ae881a849cecd5dcc48b1c

tdf#170166: sd ooxml export: fix bullets in subtitle presobj

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.