tdf#170166: sd ooxml export: fix bullets in subtitle presobj

Properly export of Subtitles as presObj was missed with
this commit: 238cfa9efa21f08514703ea6cc181ce02d8feb12
Such as missing '<a:buNone/>' attributes in slides/slide1.xml

But still keep not to export subtitle presboj into masterslide.xml
which still would cause corrupt xml when opening in mso.

regression after: ef32ba978d7be844440ee0d9c78ad37128b35512

Change-Id: I4f3e069ad1ade5bbcfa50f9096539c882c66e0b6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196308
Tested-by: Jenkins
Reviewed-by: Aron Budea <aron.budea@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196351
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>